Name visibiltity fixed

--- a/style.scss
+++ b/style.scss
@@ -150,6 +150,6 @@
     visibility: hidden;
 }
 
-#product h1{
+#hiddenProduct{
     visibility: hidden;
 }
